--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <!-- Neue Score-Anzeige oben rechts -->
     <div id="scoreDisplayFixed">Punkte: 0</div>
 
+      <div id="info-display"></div>
+
     <a-scene cursor="rayOrigin: mouse" background="color: #111">
       <a-entity position="0 4 8" rotation="-45 0 0">
         <a-camera></a-camera>
