--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     <!-- Neue Score-Anzeige oben rechts -->
     <div id="scoreDisplayFixed">Punkte: 0</div>
 
+  <div id="scoreDisplayFixed">Punkte: 0</div>
+<div id="playerCountDisplay">Spieler online: 0</div>
+
+
       <div id="info-display"></div>
+
 
     <a-scene cursor="rayOrigin: mouse" background="color: #111">
       <a-entity position="0 4 8" rotation="-45 0 0">
